Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-72688

Null pointer crash in QWaylandSurface::waylandClient

XMLWordPrintable

    • All
    • f2dc41b5babf0a7b51a1735f290540d7be695042 (qt/qtwayland/5.12)

      #ifdef Q_OS_SYLIXOS // This is a bug for Qt.
      struct wl_client *waylandClient() const

      { return client() != nullptr ? client()->client() : nullptr; }

      #else
      struct wl_client *waylandClient() const

      { return client()->client(); }

      #endif

      file: qt5/qtwayland/src/compositor/compositor_api/qwaylandsurface.h

        For Gerrit Dashboard: QTBUG-72688
        # Subject Branch Project Status CR V

            johanhelsing Johan Helsing
            xiaoyan xiao yan
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes