Compositor: Fix crash in QWaylandSurface::waylandClient

Adds a test for customSurface which crashed without the fix.

Fixes: QTBUG-72688
Change-Id: I30c50e474379c61b90b2dd294eae9a7c88c105a2
Reviewed-by: Pier Luigi Fiorini <pierluigi.fiorini@liri.io>