src/compositor/compositor_api/qwaylandsurface.h
@@ -103,7 +103,7 @@ public:
     bool isInitialized() const;
 
     QWaylandClient *client() const;
-    struct wl_client *waylandClient() const { return client()->client(); }
+    ::wl_client *waylandClient() const;
 
     bool setRole(QWaylandSurfaceRole *role, wl_resource *errorResource, uint32_t errorCode);
     QWaylandSurfaceRole *role() const;
